--- a/API/package.json
+++ b/API/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.2"
   }
