--- a/Lambda/package.json
+++ b/Lambda/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
-    "@aws-sdk/lib-storage": "^3.787.0"
+    "@aws-sdk/lib-storage": "^3.787.0",
+    "sharp": "^0.34.1"
   }
 }
