--- a/Lambda/package.json
+++ b/Lambda/package.json
@@ -13,6 +13,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/lib-storage": "^3.787.0",
+    "@img/sharp-darwin-arm64": "^0.34.1",
+    "@img/sharp-libvips-darwin-arm64": "^1.1.0",
+    "@img/sharp-libvips-linux-x64": "^1.1.0",
+    "@img/sharp-libvips-linuxmusl-x64": "^1.1.0",
+    "@img/sharp-linux-x64": "^0.34.1",
+    "@img/sharp-linuxmusl-x64": "^0.34.1",
     "sharp": "^0.34.1"
   }
 }
